# Job_Nest_Platform

Job-Networking-Portal-main/: .gitignore  API.md  DEMO_GUIDE.md  DEPLOYMENT.md  LEGAL_PAGES_URLS.md  LICENSE  QUICKSTART.md  RAZORPAY_SETUP.md  README.md  check-setup.sh  package.json  render.yaml  start-dev.sh  vercel.json
Job-Networking-Portal-main/ai/: README.md  app.py  requirements.txt
Job-Networking-Portal-main/backend/: go.mod  go.sum
Job-Networking-Portal-main/backend/cmd/: main.go
Job-Networking-Portal-main/backend/internal/database/: db.go
Job-Networking-Portal-main/backend/internal/handlers/: ai.go  auth.go  jobs.go  profile.go  razorpay.go
Job-Networking-Portal-main/backend/internal/middleware/: auth.go
Job-Networking-Portal-main/backend/internal/models/: models.go
Job-Networking-Portal-main/frontend/: index.html  package-lock.json  package.json  start.js  tailwind.config.js  vite.config.js
Job-Networking-Portal-main/frontend/public/: manifest.json
Job-Networking-Portal-main/frontend/src/: App.js  index.css
Job-Networking-Portal-main/frontend/src/components/: JobCard.js  Navbar.js  PrivateRoute.js
Job-Networking-Portal-main/frontend/src/contexts/: AuthContext.js  RazorpayContext.js  WalletContext.js
Job-Networking-Portal-main/frontend/src/pages/: Applications.js  ContactUs.js  CreateJob.js  Dashboard.js  JobDetail.js  JobDetails.js  JobFeed.js  Landing.js  Login.js  (+7 more)
Job-Networking-Portal-main/solana-program/: Cargo.toml  DEPLOYMENT_GUIDE.md  README.md  build.sh  deploy.sh
Job-Networking-Portal-main/solana-program/src/: lib.rs
