[package]
name = "job-portal-program"
version = "0.1.0"
edition = "2021"
description = "Solana program for JobNest job posting payments and escrow"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18"
borsh = "0.10"
borsh-derive = "0.10"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
